login ve register dosyalarina arkaplan fotografi dogru sekilde eklendi

--- a/admin/templates/login.html
+++ b/admin/templates/login.html
@@ -11,6 +11,14 @@
 	<title>Doğru Hoca - Giriş Yap</title>
 </head>
 <body>
+	<style>
+		body {
+			background-image: url('../../img/2.jpg');
+			background-size: cover;
+			background-position: center;
+			background-attachment: fixed;
+		}
+	</style>
 	<header>
 		<h1>Doğru Hoca</h1>
 		<p>Eğitim ve Öğretim Portalına Hoş Geldiniz</p>
