baslik yeniden duzenlendi

--- a/admin/templates/register.html
+++ b/admin/templates/register.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Kayıt, Öğretmen, Öğrenci">
 	<meta name="author" content="Doğru Hoca">
 	<link rel="stylesheet" href="styleforms.css">
-	<link rel="icon" type="image/png" href="img/logo.png">
+	<link rel="icon" type="image/png" href="../../img/logo.png">
 	<title>Doğru Hoca - Kayıt Ol</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 		}
 	</style>
 	<header>
-		<h1>Doğru Hoca</h1>
+		<h1>Dogruhoca</h1>
 		<p>Eğitim ve Öğretim Portalına Hoş Geldiniz</p>
 	</header>
 
