--- a/admin/templates/cursorai.html
+++ b/admin/templates/cursorai.html
@@ -37,7 +37,7 @@
 			<span></span>
 		</div>
 		<ul class="nav-links">
-            <li><a href="olmpiyat.html">
+            <li><a href="{{ url_for('olmpiyat') }}">
                 <i class="fa-solid fa-circle-question"></i> Olmpiyat
             </a></li>
 			<li><a href="#hakkimda">
