--- a/admin/templates/olmpiyat.html
+++ b/admin/templates/olmpiyat.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Doğru Hoca">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styleolm.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='styleolm.css') }}">
     <link rel="icon" type="image/png" href="img/logo.png">
 	<title>Doğru Hoca - Olimpiyat</title>
 </head>
