anasayfa linkleri duzenlendi

--- a/admin/templates/olmpiyat.html
+++ b/admin/templates/olmpiyat.html
@@ -25,7 +25,7 @@
 			<span></span>
 		</div>
 		<ul class="nav-links">
-			<li><a href="cursorai.html"><i class="fa-solid fa-house"></i> Anasayfa</a></li>
+			<li><a href="{{ url_for('cursorai') }}"><i class="fa-solid fa-house"></i> Anasayfa</a></li>
 			<li><a href="#hakkimda"><i class="fa-solid fa-address-card"></i> Hakkımda</a></li>
 			<li><a href="#videolar"><i class="fa-solid fa-video"></i> Videolar</a></li>
 			<li><a href="#dokumanlar"><i class="fa-solid fa-file-pdf"></i> Dökümanlar</a></li>
