changed the importance of logining

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,9 @@
 			<li><a href="#iletisim">
                 <i class="fa-solid fa-address-book"></i> İletişim
             </a></li>
+			<li><a href="{{ url_for('login') }}" class="login-button">
+				<i class="fa-solid fa-sign-in-alt"></i> Giriş Yap
+			</a></li>
 		</ul>
 	</nav>
 
@@ -76,7 +79,7 @@
 					</iframe>
 					<p>Ders açıklaması buraya gelecek...</p>
 				</div>
-				<div class="video-card">
+					<div class="video-card">
 					<h3>Ders 2: İleri Seviye Konular</h3>
 					<iframe class="responsive-iframe" src="https://www.youtube.com/embed/aJ94ZlbE2J0?si=wv6VdutObAEdvsjs" 
 						title="Ders 2: İleri Seviye Konular" frameborder="0" 
@@ -155,15 +158,7 @@
 						<button type="button" onclick="sendEmail()">Gönder</button>
 					</form>
 			</div>
-			<div>
-					<p>
-						<strong>Görüş ve Önerileriniz:</strong> Web sitemizi geliştirmek için önerileriniz veya yazılımla ilgili herhangi bir şikayetiniz varsa, lütfen bizimle iletişime geçin. 
-						<br>
-						<strong>Telefon:</strong> <a href="tel:+905431413099">+90 543 141 30 99</a>
-						<br>
-						<strong>E-posta:</strong> <a href="mailto:abdallamorsii@gmail.com">abdallamorsii@gmail.com</a>
-					</p>
-			</div>
+			
 		</section>
 	</div>
 
