--- a/templates/olmpiyat.html
+++ b/templates/olmpiyat.html
@@ -30,6 +30,7 @@
 			<li><a href="#videolar"><i class="fa-solid fa-video"></i> Videolar</a></li>
 			<li><a href="#dokumanlar"><i class="fa-solid fa-file-pdf"></i> Dökümanlar</a></li>
 			<li><a href="#iletisim"><i class="fa-solid fa-address-book"></i> İletişim</a></li>
+			<li><a href="{{ url_for('login') }}" class="login-button"><i class="fa-solid fa-sign-in-alt"></i> Giriş Yap</a></li>
 		</ul>
 	</nav>
 
