--- a/templates/login.html
+++ b/templates/login.html
@@ -51,6 +51,7 @@
 			<input type="password" id="password" name="password" placeholder="Parolanızı girin" required>
 			<button type="submit">Giriş Yap</button>
 			<p>Hesabınız yok mu? <a href="register">Kayıt Ol</a></p>
+			<p><a href="{{ url_for('home') }}">Ana Sayfaya Dön</a></p>
 		</form>
 	</div>
 
