--- a/templates/register.html
+++ b/templates/register.html
@@ -108,6 +108,9 @@
 				<button type="submit">Kayıt Ol</button>
 			</form>
 		</div>
+
+		<p>Zaten bir hesabınız var mı? <a href="{{ url_for('login') }}">Giriş Yap</a></p>
+		<p><a href="{{ url_for('home') }}">Ana Sayfaya Dön</a></p>
 	</div>
 
 	<footer>
